@@ -23,6 +23,10 @@
   <body>
 
     <release version="1.3-rc2" date="in SVN">
+      <action dev="oheger" type="update" issue="CONFIGURATION-220">
+        DataConfiguration.getDateArray() used to ignore the format argument.
+        This was fixed.
+      </action>
       <action dev="oheger" type="update" issue="CONFIGURATION-219">
         PropertiesConfiguration now defines its own clone() method to handle
         the associated PropertiesConfigurationLayout object correctly.
